@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "386";
+    public static final String VERSION = "388-3-gb67ded6";
 }
