@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  March 6 2017, 15:42
+  deviceServiceVersion = 1013390
+	
+  [+] Added correction to read cash register
+  
+********************************************************************************
+
   March 3 2017, 21:10
   deviceServiceVersion = 1013389
 	
